# tunki

./: .gitignore  CMakeLists.txt  Makefile  build.zig
src/: bus.zig  cpu.zig  ines.zig  main.cpp  main.zig  ppu.zig
